# CtrlppCheck

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  FAQ.md  Jenkinsfile  LICENSE.md  MAINTAINERS  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  buildCtrlppcheck.groovy  conanfile.py
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull-request-template.md
.github/workflows/: createBundle.yml  pr-labels.yml  publish-gh-pages.yml
WinCCOA_QualityChecks/: .gitignore
WinCCOA_QualityChecks/colorDB/: QC
WinCCOA_QualityChecks/dplist/: WinCCOA_QualityChecks.dpl
WinCCOA_QualityChecks/scripts/: QgTemplate.ctl
WinCC_OA_Test/: executeTests.cmd  general.config  readme.md  testRuns.config
cli/: CMakeLists.txt  cli.vcxproj.filters  filelister.h  main.cpp  version.rc
cmake/: findDependencies.cmake  options.cmake
ctrlppcheck/: .gitignore  CMakeLists.txt  conanfile_old.txt  doxyfile  readme.md
ctrlppcheck/cli/: CMakeLists.txt  cli.vcxproj  cmdlineparser.cpp  cmdlineparser.h  cppcheckexecutor.cpp  cppcheckexecutor.h  filelister.cpp
ctrlppcheck/cmake/: cmake_uninstall.cmake.in  compilerDefinitions.cmake  compileroptions.cmake  dynamic_analyzer_options.cmake  printInfo.cmake  versions.cmake
ctrlppcheck/docuSources/: ctrlPppCheckUsage.md  namingCheck.md
ctrlppcheck/lib/: CMakeLists.txt  calculationssimplifier.h  check.cpp  checkReturnValueOfFunction.cpp  checkY2038.cpp  checkY2038.h  checkbool.cpp  checkclass.h  checkcondition.cpp  checkcondition.h  checkfunctions.cpp  checkinternal.h  checkio.h  checknaming.cpp  checkother.h  checkpostfixoperator.cpp  checksizeof.h  checkstl.h  checkstring.h  checktype.cpp  checkuninitvar.h  checkunusedvar.cpp  checkunusedvar.h  checkvaarg.h  config.h  cppcheck.cpp  cppcheck.h  ctu.h  errorlogger.cpp  importproject.cpp  library.h  mathlib.cpp  mathlib.h  pathmatch.cpp  pathmatch.h  platform.cpp  platform.h  preprocessor.cpp  preprocessor.h  settings.cpp  (+9 more)
ctrlppcheck/lib/symbols/: accesscontrol.h  enumerator.h  symboldatabase.cpp  symbols.h  symbolutils.h  valuetype.cpp
devTools/: changeCopyright.cmd  executeTests.cmd  formatCtrlCode.cmd  readme.md  registerHelperProject.cmd
docs/: contributor.md  namingCheck.md  user.md
docuSources/: howTotestCtrlppCheck.md
lib/: CMakeLists.txt  astutils.cpp  astutils.h  calculationssimplifier.cpp  check.h  checkReturnValueOfFunction.h  checkbool.h  checkbufferoverrun.cpp  checkbufferoverrun.h  checkclass.cpp  checkfunctions.h  checkinternal.cpp  checkio.cpp  checknaming.h  checkother.cpp  checkpostfixoperator.h  checksizeof.cpp  checkstl.cpp  checkstring.cpp  checktype.h  checkuninitvar.cpp  checkunusedfunctions.cpp  checkunusedfunctions.h  checkvaarg.cpp  cppcheck.cpp  ctu.cpp  errorlogger.cpp  errorlogger.h  importproject.h  library.cpp  path.cpp  path.h  suppressions.cpp  suppressions.h  tokenize.cpp  tokenlist.cpp  utils.h  valueflow.h  version.h  version.rc
vars/: buildCtrlppcheck.groovy  downloadInstallationLayer.groovy  downloadQGates.groovy  oaProj.groovy  preBuildPackage.groovy
(+332 files in other folders)
